disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: disallow-priv-escalation
      match:
        any:
        - resources:
            kinds: ["Pod"]
      exclude:
        any:
        - resources:
            namespaces: ["kube-system", "argocd", "crossplane-system"]
      validate:
        message: "Privilege escalation is not allowed"
        pattern:
          spec:
            =(securityContext):
              =(allowPrivilegeEscalation): false
            containers:
              - =(securityContext):
                  =(allowPrivilegeEscalation): false
