enforce-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-readonly-rootfs
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: require-read-only-root-fs
      match:
        any:
        - resources:
            kinds: ["Pod"]
      exclude:
        any:
        - resources:
            namespaces: ["kube-system", "argocd", "crossplane-system","sonarqube"]
      validate:
        message: "Root filesystem must be read-only"
        pattern:
          spec:
            containers:
            - name: "*"
              securityContext:
                readOnlyRootFilesystem: true
